--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -1,12 +1,37 @@
-[
-  {
-    "code": "es",
-    "label": "Español",
-    "flag": "/assets/flags/es.png"
+
+{
+  "header": {
+    "inicio": "Inicio",
+    "sobre": "Sobre",
+    "proyectos": "Proyectos",
+    "contacto": "Contacto"
   },
-  {
-    "code": "pt",
-    "label": "Português",
-    "flag": "/assets/flags/pt.png"
+  "home": {
+    "name_home": "Sergio Coitiño",
+    "title_home": "Desarrollador Full-Stack"
+  },
+  "sobre":{
+    "titulo":"Sobre Mi",
+    "parrafo1": "Hola, soy Sergio Coitiño, desarrollador web con enfoque en Front End y en formación para convertirme en Full Stack Developer. He trabajado en proyectos utilizando HTML, CSS, JavaScript, React JS, Vite, y también cuento con experiencia en backend con Node.js.",
+    "parrafo2": "Me gusta construir interfaces funcionales y bien estructuradas, aplicar buenas prácticas y llevar mis proyectos desde la idea hasta el despliegue usando Git, GitHub y servicios de hosting. Sigo aprendiendo y perfeccionando mis habilidades para crecer como profesional dentro del mundo del desarrollo web.",
+    "skill1": "Tecnologías que utilizo",
+    "skill2": "Actualmente Estudiando / Mejorando"
+  },
+  "proyectos": {
+    "titulo": "Mis Proyectos",
+    "descripcion01": "Este proyecto es una aplicación web interactiva que permite a los usuarios calcular su IMC de manera rápida y sencilla. Cuenta con interfaz amigable y responsiva, cálculo de IMC basado en la fórmula estándar, diseño atractivo y minimalista y disponible en tres idiomas.",
+    "descripcion02": "Este proyecto es un perfil profesional en línea que muestra la información de contacto y los enlaces a las redes sociales del usuario. El diseño es minimalista y fácil de navegar, lo que lo hace ideal para cualquier profesional que desee tener una presencia en línea.",
+    "descripcion03": "Esta página web es un tributo a la película de Batman dirigida por Christopher Nolan. Es una página que replica una web de informacion y personajes de esta pelicula. Disponibe solo en portugués",
+    "descripcion04": "Portfolio web personal de Sergio Coitiño, desarrollado con HTML, CSS, JavaScript, React, Vite y Node.js. Presenta mis proyectos de front-end y back-end, con diseño responsivo y despliegue online. Disponible en español e portugués para facilitar su accesibilidad.",
+    "descripcion05": "StarWars Gallery es una aplicación web creada con React y Vite que muestra personajes, planetas y naves de Star Wars mediante APIs públicas. Presenta una galería dinámica, responsiva y basada en el ejemplo de Bootstrap Gallery, optimizada para ofrecer una experiencia visual limpia, rápida y moderna.",
+    "descripcion06": "Star Wars Characters es una aplicación web desarrollada con HTML, CSS y JavaScript que consume la API SWAPI para mostrar información y imágenes personalizadas de personajes icónicos. Un proyecto enfocado en mejorar habilidades de front-end, manejo de APIs y experiencia de usuario."
+  },
+  "contacto":{
+    "titulo": "Entre en Contacto",
+    "nombre_placeholder": "Nombre",
+    "mensaje_placeholder": "Escriba aqui su mensaje",
+    "boton": "Enviar WhatsApp",
+    "developed": "Desarrollado por Sergio Coitino.",        
+    "rights": "Todos los derechos reservados."   
   }
-]
+}
